Attempt to fix font size on mobile, again

--- a/style.css
+++ b/style.css
@@ -37,13 +37,13 @@
 }
 
 html {
-	font-size: 1rem;
+	font-size: 16px;
 }
 
 body {
 	color:       var(--color-fg);
 	font-weight: light;
-	font-size:   1rem;
+	font-size:   16px;
 
 	background-color:      #000;
 	background-attachment: fixed;
